# PROFASI_plugin_SBM

./: MIT.txt  README.md
BiasPlugin/: BiasEnergy.cc  BiasEnergy.hh  BiasPlugin.cc  CMakeLists.txt
BiasPlugin/include/BiasPlugin/: BiasPlugin.hh
ExampleFiles/: contactmap2.sidechain  go_parameters
ExampleFiles/RfaH/: 5ondA.xml  5ond_contactmap  H1.xml  H1_contactmap  H2.xml  H2_contactmap  go_parameters  settings.cnf
plugin_test/: contactmap.sidechain  random_2lcl.xml  settings.cnf
